2002-05-25  Max Horn  <max@quendi.de>

	* Services.pm: Added execute_script function (based on patch #534121 by
	Benjamin Reed).

	* PkgVersion.pm: Make use of the new execute_script function.

2002-05-25  Alexander Strange <MrVacBob@mac.com>

	* SelfUpdate.pm (setup_direct_cvs): The hardlink-support test works now.

2002-05-23  Max Horn  <max@quendi.de>

	* Engine.pm (real_install): Under certain condition, splitoffs could have 
	been activated more than once. This problem fixes this.

2002-05-16  Max Horn  <max@quendi.de>

	* Engine.pm (real_install): Fixed 'fink rebuild' to honor BuildDepends.

2002-05-16  Max Horn  <max@quendi.de>

	* Bootstrap.pm (bootstrap): Fixed bootstraping (YASB).

2002-05-11  Max Horn  <max@quendi.de>

	* Engine.pm (cmd_scanpackages): Fixed very stupid bug.

	* Validation.pm (validate_info_file): missing description field now is an
	error instead of a warning.

2002-05-05  Max Horn  <max@quendi.de>

	* PkgVersion.pm (enable_bootstrap, disable_bootstrap): fixed for splitoffs
	(thanks to Sylvain Cuaz for this patch).

2002-05-04  Max Horn  <max@quendi.de>

	* SelfUpdate.pm (do_tarball): Replaced prdownloads URL with mirror 'sourceforge'.

2002-05-02  Max Horn  <max@quendi.de>

	* PkgVersion.pm (resolve_depends): Fixed bug that made building splitoffs that 
	depend on their master impossible (affects kdebase package).

2002-05-01  Max Horn  <max@quendi.de>

	* PkgVersion.pm (get_description): Don't display DescPort and DescPackaging,
	they are unimportant for the avarage user and developers must look at the
	.info file anyway.

2002-04-25  Max Horn  <max@quendi.de>

	* Engine.pm (real_install): Fixed bug #546315

2002-04-19  Max Horn  <max@quendi.de>

	* Bootstrap.pm, Engine.pm, SelfUpdate.pm: Made storable-pm an "important"
	package like apt, i.e it will be installed during bootstrap and updated on
	on selfupdate.

2002-04-15  Max Horn  <max@quendi.de>

	* all: updated copyright notice.

2002-03-31  Max Horn  <max@quendi.de>
